tests/invalid/macro_param_dup.c
#define X(a, a)
int main() { return 0; }
